Fix scroll arrows behavior on IE8
Fixes https://trello.com/c/q5uK723g

--- a/app/assets/stylesheets/base/_tables.css.scss
+++ b/app/assets/stylesheets/base/_tables.css.scss
@@ -26,6 +26,14 @@ div.table-wrapper {
     right: -10px;
     text-align: center;
 
+    @include ie8 {
+      filter: alpha(opacity=0);
+
+      &.visible {
+        filter: alpha(opacity=100);
+      }
+    }
+
     &.visible {
       opacity: 1;
     }
